src/main/resources/org/example/kitchenorganizer/MainPage.css
.appTitle {
    -fx-font-size: 40px;
    -fx-font-family: 'Arial', sans-serif;
    -fx-font-weight: bold;
    -fx-fill: rgba(226,226,226,1);
}

.appTitleContainer {
    -fx-padding: 10;
}

.menuContainer {
    -fx-background-color: rgba(0, 0, 255, 0.75);
    -fx-border-color: black;
}

.menuContainer2 {
    -fx-border-color: black;
    -fx-background-color: rgba(226,226,226,255)
}

.foodRow {
    -fx-padding: 25;
    -fx-spacing: 50;
}

.foodColumn {
    -fx-padding: 75;
}

.foodCell {
    -fx-border-color: black;
    -fx-background-color: rgba(255, 255, 255, 255);
    -fx-padding: 15;
    -fx-font-size: 24px;
    -fx-font-family: 'Arial', sans-serif;
}

.foodCellLowQuantity {
    -fx-border-color: black;
    -fx-background-color: rgba(255, 255, 0, 255);
    -fx-padding: 15;
    -fx-font-size: 24px;
    -fx-font-family: 'Arial', sans-serif;
    -fx-font-weight: bold;
}

.foodCellExpired {
    -fx-border-color: black;
    -fx-background-color: rgba(255, 0, 0, 255);
    -fx-padding: 15;
    -fx-font-size: 24px;
    -fx-font-family: 'Arial', sans-serif;
    -fx-font-weight: bold;
}

.foodName {
    -fx-border-color: black;
    -fx-background-color: rgba(226,226,226,255);
    -fx-padding: 15;
    -fx-font-size: 24px;
    -fx-font-family: 'Arial', sans-serif;
}

.boldText {
    -fx-font-family: 'Arial', sans-serif;
    -fx-font-weight: bold;
    -fx-font-size: 24px;
}

.accessibilityFontSize {
    -fx-font-size: 24px;
}

